# Hera

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
Presets/: Preset000.xml  Preset001.xml  Preset002.xml  Preset003.xml  Preset004.xml  Preset005.xml  Preset006.xml  Preset007.xml  Preset008.xml  Preset009.xml  Preset010.xml  Preset011.xml  Preset012.xml  Preset013.xml  Preset014.xml  Preset015.xml  Preset016.xml  Preset017.xml  Preset018.xml  Preset019.xml  Preset020.xml  Preset021.xml  Preset022.xml  Preset023.xml  Preset024.xml  Preset025.xml  Preset026.xml  Preset027.xml  Preset028.xml  Preset029.xml  Preset030.xml  Preset031.xml  Preset032.xml  Preset033.xml  Preset034.xml  Preset035.xml  Preset036.xml  Preset037.xml  Preset038.xml  Preset039.xml  (+16 more)
Resources/: MagicUI.xml  presets.pak
Scripts/: GenerateDSP.sh  faust.py  pak.d
Source/: FaustHelpers.h  Hera.cpp  Hera.h  HeraArpeggiator.cpp  HeraArpeggiator.h  HeraChorus.dsp  HeraChorus.hxx  HeraCommon.dsp  HeraDCO.dsp  HeraDCO.hxx  HeraDefs.h  HeraEnvelope.cpp  HeraEnvelope.h  HeraHPF.dsp  HeraHPF.hxx  HeraLFO.cpp  HeraLFO.h  HeraLFOWithEnvelope.cpp  HeraLFOWithEnvelope.h  HeraProgram.cpp  HeraProgram.h  HeraTables.cpp  HeraTables.h  HeraVCA.dsp  HeraVCA.hxx  HeraVCF.dsp  HeraVCF.h  HeraVCF.hxx  LadderFilter.cpp  LadderFilter.h  LerpTable.h  Pak.cpp  Pak.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SmoothValue.h  bbd_filter.cpp  bbd_filter.h  (+3 more)
Source/VCF/: DangeloVCF.h  DangeloVCF.hxx  JpcVCF.dsp  JpcVCF.h  JpcVCF.hxx  PirkleVCF.cpp  PirkleVCF.h  RackVCF.h
